# RandonHw

./: .mxproject  CMakeLists.txt  CubeMX_regenerate_log.txt  RandonHw.ioc  restore_log.txt  user_backup.sh  user_restore.sh
Core/Inc/: main.h  stm32f4xx_hal_conf.h
Core/Src/: gpio.c  main.c  rng.c  usart.c
Modules/: CMakeLists.txt
Modules/InterfaceUI/: CMakeLists.txt
Modules/InterfaceUI/Inc/: ConsoleInterface.h
Modules/InterfaceUI/Src/: ConsoleInterface.c
Utilities/: CMakeLists.txt
Utilities/PrintUART/: CMakeLists.txt
Utilities/PrintUART/Inc/: printUART.h
Utilities/PrintUART/Src/: printUART.c
cmake/: starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
